feat: add Product update, delete, hide APIs