@@ -6,10 +6,15 @@ import kr.mayb.data.model.Product;
 import kr.mayb.data.model.ProductDateTime;
 import kr.mayb.data.model.ProductGender;
 import kr.mayb.data.model.ProductTag;
+import kr.mayb.data.repository.ProductDateTimeRepository;
+import kr.mayb.data.repository.ProductGenderRepository;
 import kr.mayb.data.repository.ProductRepository;
+import kr.mayb.data.repository.ProductTagRepository;
 import kr.mayb.dto.GenderPrice;
 import kr.mayb.dto.ProductDto;
 import kr.mayb.dto.ProductRegistrationRequest;
+import kr.mayb.dto.ProductUpdateRequest;
+import kr.mayb.enums.GcsBucketPath;
 import kr.mayb.enums.ProductStatus;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -17,13 +22,20 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
 public class ProductService {
 
+    private final ImageService imageService;
+
     private final ProductRepository productRepository;
+    private final ProductTagRepository productTagRepository;
+    private final ProductGenderRepository productGenderRepository;
+    private final ProductDateTimeRepository productDateTimeRepository;
 
     @Transactional
     public ProductDto registerProduct(ProductRegistrationRequest request, String profileUrl, String detailUrl, long creatorId) {
@@ -53,7 +65,7 @@ public class ProductService {
                     productTag.setProduct(product);
                     return productTag;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         List<ProductDateTime> productDateTimes = dateTimes.stream()
                 .filter(Objects::nonNull)
@@ -63,7 +75,7 @@ public class ProductService {
                     productDateTime.setProduct(product);
                     return productDateTime;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         List<ProductGender> productGenders = genderPrices.stream()
                 .map(genderPrice -> {
@@ -73,7 +85,7 @@ public class ProductService {
                     productGender.setProduct(product);
                     return productGender;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         product.setProductTags(productTags);
         product.setProductDateTimes(productDateTimes);
@@ -96,5 +108,60 @@ public class ProductService {
                 .filter(product -> product.getStatus() == ProductStatus.ACTIVE)
                 .map(ProductDto::of)
                 .toList();
+    }
+
+    @Transactional
+    public ProductDto updateProduct(long productId, Optional<String> profileUrl, Optional<String> detailUrl, ProductUpdateRequest request, long modifierId) {
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> new IllegalArgumentException("상품을 찾을 수 없습니다.: " + productId));
+
+        product.setName(request.name());
+        product.setOriginalPrice(request.originalPrice());
+        product.setSalePrice(request.salePrice());
+        product.setDescription(request.description());
+
+        updateProductImage(profileUrl, detailUrl, product);
+        clearAndUpdateAdditionalInfo(request, product);
+
+        product.setLastModifierId(modifierId);
+        Product updated = productRepository.save(product);
+        return ProductDto.of(updated);
+    }
+
+    @Transactional
+    public void delete(long productId) {
+        productRepository.deleteById(productId);
+    }
+
+    @Transactional
+    public void changeStatus(long productId, boolean active, long memberId) {
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> new IllegalArgumentException("상품을 찾을 수 없습니다.: " + productId));
+
+        if (active) {
+            product.setStatus(ProductStatus.ACTIVE);
+        } else {
+            product.setStatus(ProductStatus.INACTIVE);
+        }
+
+        product.setLastModifierId(memberId);
+    }
+
+    private void updateProductImage(Optional<String> profileUrl, Optional<String> detailUrl, Product product) {
+        profileUrl.ifPresent(url -> {
+            imageService.delete(product.getProfileImageUrl(), GcsBucketPath.PRODUCT_PROFILE);
+            product.setProfileImageUrl(url);
+        });
+        detailUrl.ifPresent(url -> {
+            imageService.delete(product.getDetailImageUrl(), GcsBucketPath.PRODUCT_DETAIL);
+            product.setDetailImageUrl(url);
+        });
+    }
+
+    private void clearAndUpdateAdditionalInfo(ProductUpdateRequest request, Product product) {
+        productTagRepository.deleteByProduct(product);
+        productGenderRepository.deleteByProduct(product);
+        productDateTimeRepository.deleteByProduct(product);
+        saveAdditionalInfo(request.tags(), request.dateTimes(), request.genderPrices(), product);
     }
 }
